# git-subcopy

./: .gitcopies  .gitlab-ci.yml  Cargo.toml  README.md  default.nix  pinned.nix  shell.nix
src/: lib.rs  main.rs
test-subcopies/: all-packages.nix
test-subcopies/xidlehook-src/: main.rs
