[package]
name = "git-subcopy"
description = "Link files across git repositories"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
edition = "2018"
repository = "https://gitlab.com/jD91mZM2/git-subcopy"
keywords = ["git"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
git2 = "0.10.1"
base64 = "0.10.1"
dirs = "2.0.2"
structopt = "0.3.3"
anyhow = "1.0.11"
tempfile = "3.1.0"
walkdir = "2.2.9"
log = "0.4.8"
env_logger = "0.7.0"
